fixed img/icon spacing

--- a/CssGrid/style.css
+++ b/CssGrid/style.css
@@ -129,6 +129,7 @@ img {
     background: var(--primary);
     text-align: center;
     padding: 1.5rem, 2rem;
+    padding-top: 1.5rem;
     box-shadow: var(--shadow);
 }
 
@@ -150,7 +151,7 @@ img {
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 
-.portfolio {
+.portfolios {
     width: 100%;
     box-shadow: var(--shadow);
 }
